welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: '<-' expected but ')' found.
    for (j<=0 to hauteur){
                        ^ColumnByColumn:12: error: illegal start of simple expression
  }
  ^